--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,7 +25,7 @@ jobs:
       run: bundle exec rspec
     
     - name: Build gem
-      run: gem build graph_agent.gemspec
+      run: gem build graph-agent.gemspec
     
     - name: Publish to RubyGems
       run: |
